fix(collapsible-section): make long section title truncate
Before this fix, long titles would destroy the UI and misplace the actions menu

--- a/src/components/collapsible-section/collapsible-section.scss
+++ b/src/components/collapsible-section/collapsible-section.scss
@@ -41,7 +41,18 @@
 }
 
 .section__header__title {
-    flex-grow: 1;
+  flex-grow: 1;
+  justify-self: flex-start;
+  padding-right: pxToRem(12);
+
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.section__header__actions {
+  justify-self: flex-end;
+  flex-shrink: 0;
 }
 
 .section__body {
